--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "nuxt": "^3.17.5",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "vue-tsc": "^2.2.10"
   }
 }
